# scrape-extract-data-sumatera

./: .gitignore  README.md  pyproject.toml
data-input/: wilayah_sumatera.csv
scripts/: extract_fasilitas_pbf.py  extract_road_network_pbf.py  scrapping_road_network.py  visualize_fasilitas.py  visualize_road_network.py
